--- a/tools/gen_python_packages/{{cookiecutter.__project}}/src/bentoml_plugins/{{cookiecutter.__provider}}/BUILD
+++ b/tools/gen_python_packages/{{cookiecutter.__project}}/src/bentoml_plugins/{{cookiecutter.__provider}}/BUILD
@@ -1,7 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@rules_python//python:defs.bzl", "py_library")
-load("//:requirements.bzl", "requirement")
+load("@pypi//:requirements.bzl", "requirement")
 
 py_library(
     name = "{{ cookiecutter.__provider }}",
@@ -9,4 +9,5 @@ py_library(
     deps = [
         requirement("bentoml"),
     ],
+    imports = ["../.."]
 )
