--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ dmypy.json
 
 # bazel generated files
 bazel-*
-.updatedeps.lock
+.bazel-requirements.lock
 
 # ignore generated lock.
 *.lock.txt
