--- a/rules/BUILD
+++ b/rules/BUILD
@@ -1,6 +1,16 @@
-package(default_visibility = ["//:__subpackages__"])
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
-exports_files([
-    "deps.bzl",
-    "workspace.bzl",
-])
+package(default_visibility = ["//:__pkg__"])
+
+[
+    bzl_library(
+        name = "{}.bzl".format(src),
+        srcs = ["{}.bzl".format(src)],
+    )
+    for src in [
+        "deps",
+        "workspace0",
+        "workspace1",
+        "workspace2",
+    ]
+]
