--- a/monitoring/bentoml-plugins-arize/tests/BUILD
+++ b/monitoring/bentoml-plugins-arize/tests/BUILD
@@ -1,5 +1,4 @@
-load("@pypi//:requirements.bzl", "requirement")
-load("@com_github_bentoml_bentoml//rules/py:python.bzl", "py_test")
+load("//rules/py:python.bzl", "py_test")
 
 package(default_visibility = ["//visibility:public"])
 
