--- a/rules/py/BUILD
+++ b/rules/py/BUILD
@@ -1,4 +1,4 @@
-load("@rules_python//python:defs.bzl", "py_library")
+load("@rules_python//python:defs.bzl", "py_binary")
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load("@pypi//:requirements.bzl", "requirement")
 
