--- a/monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize/BUILD
+++ b/monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize/BUILD
@@ -1,16 +1,17 @@
-package(default_visibility = ["//visibility:public"])
-
 load("@rules_python//python:defs.bzl", "py_library")
-load("@pypi//:requirements.bzl", "requirement")
+load("@pypi//:requirements.bzl", plugins_requirement = "requirement")
+load("@external//:requirements.bzl", external_requirement = "requirement")
+
+package(default_visibility = ["//visibility:public"])
 
 py_library(
     name = "arize",
     srcs = ["__init__.py"],
     imports = ["../.."],
     deps = [
-        "@com_github_bentoml_bentoml//src/bentoml",
-        requirement("arize"),
-        requirement("attrs"),
+        "@com_github_bentoml_bentoml//:sdk",
+        external_requirement("arize"),
+        plugins_requirement("attrs"),
     ],
 )
 
