--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -52,4 +52,6 @@ runs:
       run: bazel run //:pypi.update
     - name: Install development dependencies
       shell: bash
-      run: python -m pip install git+https://github.com/bentoml/bentoml.git@main
+      run: |
+        python -m pip install ruff
+        python -m pip install git+https://github.com/bentoml/bentoml.git@main
