--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -1,3 +1,18 @@
+# Coloring for error messages.
+common --color=yes
+
+# prevent creation of empty __init__.py
+# see: https://github.com/bazelbuild/bazel/issues/10076, https://github.com/bazelbuild/bazel/issues/7386
+build --incompatible_default_to_explicit_init_py
+test --incompatible_default_to_explicit_init_py
+
+# Windows requires enable_runfiles
+build --enable_runfiles
+startup --windows_enable_symlinks
+
+build --verbose_failures
+build --worker_verbose
+
 test --test_output=errors
 test --test_env=PYTEST_PLUGINS=bentoml.testing.pytest.plugin
 
