fix: make sure to run lockfiles first
Signed-off-by: Aaron Pham <29749331+aarnphm@users.noreply.github.com>

--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -53,5 +53,6 @@ runs:
     - name: Install development dependencies
       shell: bash
       run: |
+        ./hack/update-deps
         python -m pip install ruff
         python -m pip install git+https://github.com/bentoml/bentoml.git@main
