--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Run python${{ matrix.python-version }} tests
-        run: bazel test //monitoring/bentoml-plugins-arize/tests/...
+        run: bazel test //monitoring/...
