--- a/rules/BUILD
+++ b/rules/BUILD
@@ -1,6 +1,6 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
-package(default_visibility = ["//:__pkg__"])
+package(default_visibility = ["//visibility:public"])
 
 [
     bzl_library(
