chore: vendor aspect_py pytest_main
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.pytest.ini_options]
-addopts = ["-rfEX", "-vvv", "--capture=tee-sys"]
+addopts = ["-rfEX"]
 python_files = ["test_*.py", "*_test.py"]
 testpaths = ["tests"]
 
