--- a/tools/gen_python_packages/{{cookiecutter.__project}}/src/bentoml_plugins/{{cookiecutter.__provider}}/BUILD
+++ b/tools/gen_python_packages/{{cookiecutter.__project}}/src/bentoml_plugins/{{cookiecutter.__provider}}/BUILD
@@ -1,7 +1,7 @@
-package(default_visibility = ["//visibility:public"])
-
 load("@rules_python//python:defs.bzl", "py_library")
-load("@pypi//:requirements.bzl", "requirement")
+load("//rules/py/vendorred:pypi.bzl", "requirement")
+
+package(default_visibility = ["//visibility:public"])
 
 py_library(
     name = "{{ cookiecutter.__provider }}",
