--- a/rules/py/BUILD
+++ b/rules/py/BUILD
@@ -1,6 +1,6 @@
 load("@rules_python//python:defs.bzl", "py_binary")
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("@pypi//:requirements.bzl", "requirement")
+load("//rules/py/vendorred:pypi.bzl", "requirement")
 
 package(default_visibility = ["//:__subpackages__"])
 
