--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -94,6 +94,7 @@ alias(
 
 buildifier(
     name = "buildfmt",
+    exclude_patterns = ["./rules/py/vendorred/*"],
 )
 
 buildifier_test(
@@ -103,6 +104,10 @@ buildifier_test(
         "**/*.bazel",
         "monitoring/**/*/BUILD",
     ]),
+    exclude_patterns = ["./rules/py/vendorred/*"],
+    no_sandbox = True,
+    verbose = True,
+    workspace = "//:WORKSPACE",
 )
 
 alias(
