chore: update jobs
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 name: CI
 concurrency:
-  group: ci-${{ github.event.pull_request.number || github.sha }}-${{ github.head_ref
-    || github.run_id }}
+  group: ci-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
 on:
   schedule:
