--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -49,7 +49,4 @@ runs:
           ${{ steps.get-cache-key-prefix.outputs.prefix }}-pypi-
     - name: Install development dependencies
       shell: bash
-      run: |
-        ./hack/update-deps
-        python -m pip install ruff
-        python -m pip install git+https://github.com/bentoml/bentoml.git@main
+      run: ./hack/update-deps
