chore: add more tests for bazel 6
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/monitoring/bentoml-plugins-arize/tests/BUILD
+++ b/monitoring/bentoml-plugins-arize/tests/BUILD
@@ -4,5 +4,9 @@ package(default_visibility = ["//visibility:public"])
 
 py_test(
     name = "package",
+    args = [
+        "--cov=monitoring/bentoml-plugins-arize/src",
+        "--cov-report=term-missing",
+    ],
     deps = ["//monitoring/bentoml-plugins-arize/src/bentoml_plugins/arize"],
 )
