fix: types on CI
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -50,4 +50,4 @@ runs:
       shell: bash
       run: |
         ./hack/update-deps
-        pip install ruff
+        pip install -r requirements/pypi.txt -r requirements/external.txt
