chore: running types on PR
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -53,4 +53,5 @@ jobs:
       - name: Setup CI
         uses: ./.github/actions/setup-repo
       - name: Run format check
+        if: ${{ github.event_name == 'pull_request' }}
         run: ./hack/type
