ci: fix breakage (#32)
* chore: fix linting

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

* chore: update jobs

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

* chore: add more tests for bazel 6

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

* fix: ci

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

* fix: types on CI

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

* chore: running types on PR

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

---------

Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -35,7 +35,6 @@ runs:
       with:
         key: ${{ steps.get-cache-key-prefix.outputs.prefix }}-bazel
         path: |
-          ~/.cache/bazel
           tools/
         restore-keys: |
           ${{ steps.get-cache-key-prefix.outputs.prefix }}-bazel-
@@ -51,5 +50,4 @@ runs:
       shell: bash
       run: |
         ./hack/update-deps
-        python -m pip install ruff
-        python -m pip install git+https://github.com/bentoml/bentoml.git@main
+        pip install -r requirements/pypi.txt -r requirements/external.txt
