fix: export names
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/rules/py/BUILD
+++ b/rules/py/BUILD
@@ -8,7 +8,7 @@ exports_files(["*.py"])
 
 [
     bzl_library(
-        name = lib,
+        name = "{}.bzl".format(lib),
         srcs = ["{}.bzl".format(lib)],
     )
     for lib in [
