--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-requirements/*-requirements.lock.txt linguist-generated=true
-requirements.bzl linguist-generated=true
+requirements/*.lock.txt linguist-generated=true
+rules/py/vendorred/*.bzl linguist-generated=true
 nix/sources.nix linguist-generated=true
 typings/**/*.pyi linguist-generated=true
